# sphinx-evita

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pylock.toml  pyproject.toml
.github/workflows/: build.yaml
docs/: Makefile  conf.py  index.md  ref-for-module-authors.md  references.bib
docs/_static/: overrides.css
docs/_static/slides/: efficient-array-computing.pptx
src/sphinx_evita/: __init__.py  css.py  directives.py  hooks.py  pdfembed.py
src/sphinx_evita/_static/: furo_ext_lesson.css
tests/: conftest.py  test_pdfembed_directive.py
tests/test_pdfembed_directive/: test_regression.xml
