[project]
name = "sphinx-evita"
version = "0.1.0b0"
description = "Sphinx plugins and theme customizations for the EVITA project"
readme = "README.md"
authors = [
    { name = "Ashwin V. Mohanan", email = "ashwin.mohanan@enccs.se" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "furo>=2025.9.25",
    "sphinx>=8.2.3",
    "sphinx-lesson>=0.8.16",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
